--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "array-map": "0.0.0",
     "array-reduce": "0.0.0",
     "arrayreduce": "^2.1.0",
+    "discord-emoji-converter": "^1.0.0",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
@@ -26,7 +27,6 @@
     "lodash.transform": "^4.6.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "node-emoji": "^1.10.0",
     "object-keys": "^1.1.1",
     "progress-string": "^1.2.2",
     "request": "^2.88.2",
